--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                         </div>
                         <div style="display: flex; align-items: baseline;">
                             <p style="margin-bottom: 5px; margin-right: 10px; font-size: 18px;">Email:</p>
-                            <p style="font-size: 16px;">jesus@csu.fullerton.edu</p>
+                            <p style="font-size: 16px;">jesuscastillo19@csu.fullerton.edu</p>
                         </div>
                     </div>
                     <div class="contact-info" style="margin-bottom: 10px;">
